--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -18,6 +18,7 @@
 
 .footer-menu {
   flex: 1 0 auto;
+  width: 100%;
   // border: 1px purple solid;
   color: #244A90;
   padding-bottom: 10px;
