--- a/source/stylesheets/components/caroussel.scss
+++ b/source/stylesheets/components/caroussel.scss
@@ -22,3 +22,10 @@
 }
 
 
+@media (max-width: 767.98px) {
+
+}
+
+@media (max-width: 991.98px) {
+
+}
